fix wrap table and responsive property modal

--- a/src/app/Contract/list-contract/list-contract.component.scss
+++ b/src/app/Contract/list-contract/list-contract.component.scss
@@ -1,4 +1,7 @@
 .mat-elevation-z8{
+  @media (max-width: 650px) {
+    height: calc(100% - 233px);
+  }
   overflow: auto;
   height: calc(100% - 247px);
 }
