--- a/src/app/Property/add-property/add-property.component.scss
+++ b/src/app/Property/add-property/add-property.component.scss
@@ -6,10 +6,6 @@
     background-color: aliceblue;
 }
 
-.form-row{
-    margin:auto;
-}
-
 .mat-form-field{
     margin-right:20px;
 
