--- a/src/app/Renter/list-renter/list-renter.component.scss
+++ b/src/app/Renter/list-renter/list-renter.component.scss
@@ -1,4 +1,8 @@
 .mat-elevation-z8{
+  @media (max-width: 650px) {
+    height: calc(100% - 233px);
+  }
+
   height: calc(100% - 247px);
   overflow: auto;
 }
